Se corrigieron todos los errores PEP8 en los scripts de tests y dags.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 data/*
 prueba.ipynb
 logs/*
+.pytest_cache/*
+/scripts/__pycache__/*
+/tests/__pycache__/*
+/dags/__pycache__/*
+/dags/.pytest_cache/*
