Se configura la incorporación de los Github Secrets al yaml de testing.

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -28,5 +28,8 @@ jobs:
         pip install -r requirements_test.txt
 
     - name: Run tests
+      env:
+        API_HOST: ${{ secrets.API_HOST }}
+        API_KEY: ${{ secrets.API_KEY }}
       run: |
         pytest tests/
