--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/scripts:/opt/airflow/scripts  # Volumen para los scripts
     - ${AIRFLOW_PROJ_DIR:-.}/data:/opt/airflow/data        # Volumen para los datos
+    - ${AIRFLOW_PROJ_DIR:-.}/sql:/opt/airflow/sql  # Volumen para los scripts SQL
   user: "0:0"  # Ejecutar los servicios como root
   depends_on:
     &airflow-common-depends-on
